--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "sudoku",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sudoku slover",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "SC0d3r",
+  "license": "MIT",
+  "dependencies": {
+    "ramda": "^0.26.1"
+  }
 }
